# kabel

./: .gitignore  Cargo.toml  README.md  install.sh
.claude/skills/kabel/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: kabel.rb
examples/: team.yaml
src/: cli.rs  inbox.rs  lib.rs  main.rs  output.rs  registry.rs  spawn.rs  storage.rs  validate.rs
