[package]
name = "kabel"
version = "0.1.0"
edition = "2021"
description = "Multi-agent communication CLI for Claude Code and OpenCode sessions"
license = "MIT"
repository = "https://github.com/LarryStanley/kabel"
keywords = ["cli", "multi-agent", "claude-code", "opencode", "communication"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "kabel"
path = "src/lib.rs"

[[bin]]
name = "kabel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
serde_yaml = "0.9"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
